--- a/聊天系统/css/search_all_user.css
+++ b/聊天系统/css/search_all_user.css
@@ -1,89 +1,141 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 14px; }
+  font-size: 14px;
+}
 
 input {
   border: none;
   outline: 0;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 @font-face {
   font-family: 'iconfont';
   /* project id 1898437 */
   src: url("../font_1898437_g0xkwswgnzm/iconfont.eot");
-  src: url("../font_1898437_g0xkwswgnzm/iconfont.eot?#iefix") format("embedded-opentype"), url("../font_1898437_g0xkwswgnzm/iconfont.woff2") format("woff2"), url("../font_1898437_g0xkwswgnzm/iconfont.woff") format("woff"), url("../font_1898437_g0xkwswgnzm/iconfont.ttf") format("truetype"), url("../font_1898437_g0xkwswgnzm/iconfont.svg#iconfont") format("svg"); }
+  src: url("../font_1898437_g0xkwswgnzm/iconfont.eot?#iefix") format("embedded-opentype"), url("../font_1898437_g0xkwswgnzm/iconfont.woff2") format("woff2"), url("../font_1898437_g0xkwswgnzm/iconfont.woff") format("woff"), url("../font_1898437_g0xkwswgnzm/iconfont.ttf") format("truetype"), url("../font_1898437_g0xkwswgnzm/iconfont.svg#iconfont") format("svg");
+}
+
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .out {
   width: 100vw;
-  min-height: 100vh; }
-  .out .tcbox {
-    position: absolute;
-    min-width: 1.2rem;
-    height: .4rem;
-    text-align: center;
-    top: 0;
-    color: #2b2725;
-    line-height: .4rem;
-    background-color: #bdf7e559;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 15px;
-    font-size: 20px;
-    opacity: 0;
-    transition: .6s; }
-    .out .tcbox p {
-      color: #778385; }
-  .out .main {
-    width: 100%;
-    height: 100%;
-    padding: 0.15rem 0.1rem;
-    box-sizing: border-box; }
-    .out .main .top input {
-      background: #80808017;
-      width: 3rem;
-      height: .35rem;
-      border-radius: 24px;
-      text-indent: 1.4em; }
-    .out .main .top input::placeholder {
-      text-indent: .3em; }
-    .out .main .top span {
-      display: inline-block;
-      width: .4rem;
-      height: .35rem;
-      text-align: center;
-      line-height: .35rem;
-      color: #4848eeba;
-      font-size: 18px;
-      margin-left: 7px; }
-    .out .main .container {
-      margin-top: .1rem;
-      padding: 0 .1rem; }
-      .out .main .container .user_infomation {
-        display: flex;
-        height: .4rem;
-        justify-content: space-between;
-        padding: .1rem 0; }
-        .out .main .container .user_infomation .information_left {
-          display: flex;
-          justify-content: space-between; }
-          .out .main .container .user_infomation .information_left img {
-            width: .4rem;
-            height: .4rem; }
-          .out .main .container .user_infomation .information_left p {
-            font-size: 20px;
-            line-height: .4rem;
-            margin-left: .1rem; }
-        .out .main .container .user_infomation span {
-          font-size: 20px;
-          line-height: .4rem; }
+  min-height: 100vh;
+}
 
+.out .tcbox {
+  position: absolute;
+  min-width: 1.2rem;
+  height: .4rem;
+  text-align: center;
+  top: 0;
+  color: #2b2725;
+  line-height: .4rem;
+  background-color: #bdf7e559;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-radius: 15px;
+  font-size: 20px;
+  opacity: 0;
+  -webkit-transition: .6s;
+  transition: .6s;
+}
+
+.out .tcbox p {
+  color: #778385;
+}
+
+.out .main {
+  width: 100%;
+  height: 100%;
+  padding: 0.15rem 0.1rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.out .main .top input {
+  background: #80808017;
+  width: 3rem;
+  height: .35rem;
+  border-radius: 24px;
+  text-indent: 1.4em;
+}
+
+.out .main .top input::-webkit-input-placeholder {
+  text-indent: .3em;
+}
+
+.out .main .top input:-ms-input-placeholder {
+  text-indent: .3em;
+}
+
+.out .main .top input::-ms-input-placeholder {
+  text-indent: .3em;
+}
+
+.out .main .top input::placeholder {
+  text-indent: .3em;
+}
+
+.out .main .top span {
+  display: inline-block;
+  width: .4rem;
+  height: .35rem;
+  text-align: center;
+  line-height: .35rem;
+  color: #4848eeba;
+  font-size: 18px;
+  margin-left: 7px;
+}
+
+.out .main .container {
+  margin-top: .1rem;
+  padding: 0 .1rem;
+}
+
+.out .main .container .user_infomation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: .4rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: .1rem 0;
+}
+
+.out .main .container .user_infomation .information_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.out .main .container .user_infomation .information_left img {
+  width: .4rem;
+  height: .4rem;
+}
+
+.out .main .container .user_infomation .information_left p {
+  font-size: 20px;
+  line-height: .4rem;
+  margin-left: .1rem;
+}
+
+.out .main .container .user_infomation span {
+  font-size: 20px;
+  line-height: .4rem;
+}
 /*# sourceMappingURL=search_all_user.css.map */
