--- a/聊天系统/css/main_box.css
+++ b/聊天系统/css/main_box.css
@@ -1,37 +1,79 @@
 * {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 .main {
   width: 100vw;
   height: 100vh;
   font-size: 0;
-  overflow: hidden; }
-  .main .main_window {
-    width: 100%;
-    height: 90%;
-    border: none; }
-  .main .footer {
-    width: 100%;
-    height: 10%; }
-    .main .footer .container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      color: #999999;
-      background-color: #d5c7c738; }
-    .main .footer span {
-      width: 33.33%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center; }
-      .main .footer span i {
-        font-size: 35px; }
-      .main .footer span p {
-        font-size: 12px; }
-    .main .footer .isclicked {
-      color: #64d4fd; }
+  overflow: hidden;
+}
 
+.main .main_window {
+  width: 100%;
+  height: 90%;
+  border: none;
+}
+
+.main .footer {
+  width: 100%;
+  height: 10%;
+}
+
+.main .footer .container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #999999;
+  background-color: #d5c7c738;
+}
+
+.main .footer span {
+  width: 33.33%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.main .footer span i {
+  font-size: 35px;
+}
+
+.main .footer span p {
+  font-size: 12px;
+}
+
+.main .footer span .information_num {
+  width: .24rem;
+  height: .24rem;
+  background: #e80909fa;
+  text-align: center;
+  line-height: .24rem;
+  border-radius: 50%;
+  color: #ffffffbd;
+  font-size: 12px;
+  position: absolute;
+  right: .1rem;
+  top: .2rem;
+  display: none;
+}
+
+.main .footer .isclicked {
+  color: #64d4fd;
+}
 /*# sourceMappingURL=main_box.css.map */
