--- a/聊天系统/css/register.css
+++ b/聊天系统/css/register.css
@@ -1,18 +1,27 @@
 @charset "UTF-8";
 .register_window {
-  display: none; }
-  .register_window .middle {
-    margin: .5rem .1rem; }
-    .register_window .middle .loading:nth-of-type(2) {
-      margin: .1rem 0; }
-  .register_window .footer {
-    padding: 0; }
+  display: none;
+}
+
+.register_window .middle {
+  margin: .5rem .1rem;
+}
+
+.register_window .middle .loading:nth-of-type(2) {
+  margin: .1rem 0;
+}
+
+.register_window .footer {
+  padding: 0;
+}
 
 .register_window h2 {
-  text-align: center; }
+  text-align: center;
+}
 
 #regist_nickname {
-  margin: .1rem 0; }
+  margin: .1rem 0;
+}
 
 #regist_btn {
   font-size: .4rem;
@@ -23,12 +32,13 @@
   background-repeat: no-repeat;
   padding: 0;
   height: .8rem;
-  width: .8rem; }
+  width: .8rem;
+}
 
 .top i {
   font-size: .25rem;
   position: relative;
   top: -68px;
-  color: gray; }
-
+  color: gray;
+}
 /*# sourceMappingURL=register.css.map */
