--- a/聊天系统/css/chatpage.css
+++ b/聊天系统/css/chatpage.css
@@ -46,7 +46,7 @@ body{
     overflow: scroll;
 }
 .send{
-    padding: .133333rem /* 5/37.5 */;
+    padding: .133333rem /* 5/37.5 */ .266667rem /* 10/37.5 */;
     border: 1px solid white;
     background-color: rgb(135, 241, 248);
     border-radius: 1.2rem /* 45/37.5 */;
@@ -63,17 +63,22 @@ body{
 }
 .mybox{
     background-color: antiquewhite;
-    display: inline;
+    display: inline-block;
+    position: relative;
     border-radius: .266667rem /* 10/37.5 */;
     /* right: 0; */
     display: block;
-    padding: .133333rem /* 5/37.5 */;
+    padding: .266667rem 0 .266667rem .266667rem;
+    font-size: .48rem /* 18/37.5 */;
+    max-width: 7.573333rem /* 284/37.5 */;
+    max-height: 6.4rem /* 240/37.5 */;
+    overflow-wrap: break-word;
 }
 .mybox::after{
     content: "";
     width: 0;
     height: 0;
-    right: -10px;
+    right: -.426667rem /* -16/37.5 */;
     position: absolute;
     border: 8px solid transparent;
     border-left-color: antiquewhite;
@@ -84,21 +89,25 @@ body{
     display: inline-block;
 }
 .sendb{
-    height: 1.6rem /* 60/37.5 */;
     display: inline-block;
     position: absolute;
-    right: 0;
-    padding: .4rem;
+    /* padding: .4rem; */
+    right: .266667rem /* 10/37.5 */;
+    
+    
 }
 .nickname{
+    top: 0;
+    right: 1.6rem /* 60/37.5 */;
     display: inline-block;
-    /* position: absolute; */
-    top: -.4rem /* -15/37.5 */;
-    right: .133333rem /* 5/37.5 */;
+    font-size: .426667rem /* 16/37.5 */;
+    /* float: right; */
+    position: absolute;
+
 }
 .leftmm{
     display: inline-block;
-    position: relative;
+    /* position: relative; */
     padding-right: .133333rem /* 5/37.5 */;
 }
 .revb{
@@ -109,11 +118,6 @@ body{
 }
 
 
-.rightmm{
-    display: inline-block;
-    position: relative;
-    padding-right: .133333rem /* 5/37.5 */;
-}
 .mbox{
     background-color: antiquewhite;
     display: inline-block;
@@ -121,7 +125,6 @@ body{
     /* right: 0; */
     display: block;
     padding: .133333rem /* 5/37.5 */;
-    
 }
 .mbox::before{
     content: "";
@@ -131,4 +134,47 @@ body{
     position: absolute;
     border: 8px solid transparent;
     border-right-color: antiquewhite;
+}
+.messbox{
+    position: relative;
+    padding-top: .266667rem /* 10/37.5 */;
+    min-height: 2rem /* 75/37.5 */;
+    max-height: 5rem;
+}
+.rightmm{
+    display: inline-block;
+    position: relative;
+    padding-right: .133333rem /* 5/37.5 */;
+}
+.nickname2{
+    font-size: .48rem /* 18/37.5 */;
+}
+.mybox2{
+    background-color: antiquewhite;
+    display: inline-block;
+    position: relative;
+    border-radius: .266667rem /* 10/37.5 */;
+    /* right: 0; */
+    display: block;
+    margin-left: .266667rem /* 10/37.5 */;
+    padding: .266667rem .266667rem .266667rem 0;
+    font-size: .48rem /* 18/37.5 */;
+}
+.mybox2::before{
+    content: "";
+    width: 0;
+    height: 0;
+    left: -.426667rem /* -16/37.5 */;
+    position: absolute;
+    border: 8px solid transparent;
+    border-right-color: antiquewhite;
+}
+.sendb2{
+    display: inline-block;
+    margin-left: .266667rem /* 10/37.5 */;
+}
+.headlogo2{
+    
+    border-radius: 50%;
+    display: inline-block;
 }
