添加friend_head_log

--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -231,7 +231,8 @@ ul,li{
           }
           .notice_container{
             font-size: 14px;
-            width: 88%;
+            width: 69vw;
+            overflow: hidden;
             text-overflow: ellipsis;
             display: inline-block;
           }
