--- a/聊天系统/css/Main.scss
+++ b/聊天系统/css/Main.scss
@@ -231,8 +231,7 @@ ul,li{
           }
           .notice_container{
             font-size: 14px;
-            width: 69vw;
-            overflow: hidden;
+            width: 88%;
             text-overflow: ellipsis;
             display: inline-block;
           }
