--- a/聊天系统/css/friendsStyle.css
+++ b/聊天系统/css/friendsStyle.css
@@ -77,7 +77,8 @@
 }
 #content{
     width:100%;
-    min-height: 70vh;
+    min-height:120vh;
+    /* height:800px; */
     /* background-color: deeppink; */
     position: absolute;
     display: flex;
@@ -87,7 +88,7 @@
 }
 #content #newFriends{
     width:100%;
-    height:15%;
+    height:10%;
     /* background-color: lawngreen; */
     border-bottom: 1px solid gray;
     box-shadow: gray;
@@ -125,11 +126,11 @@
     height: 90%;
     /* background-color: gold; */
     position: absolute;
-    top:20%;
+    top:15%;
 }
 #content #friendsUl .friends{
     width:100%;
-    height:15%;
+    height:10%;
     position: relative;
     margin-bottom: 5px;
 }
@@ -141,21 +142,25 @@
     /* background-color: lawngreen; */
     display: inline-block;
 }
-#content #friendsUl .friends img{
+#content #friendsUl .friends .Logo img{
     width:100%;
     height:100%;
     object-fit:contain;
     border-radius: 50%;
     margin-left:0;
 }
-/* #content #friendsUl .friends .Logo{
-    width:38.33px;
-    height:38.33px;
-    border-radius: 50%;
-    background-color: darkturquoise;
+#content #friendsUl .friends .Logo{
+    width:50px;
+    height:50px;
+    /* background-color: darkturquoise; */
     display: inline-block;
     margin-left:5%;
-} */
+}
+#content #friendsUl .friends .Logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
 #content #friendsUl .friends .nickname{
     width:80%;
     height:50%;
