--- a/聊天系统/css/chatpage.css
+++ b/聊天系统/css/chatpage.css
@@ -44,6 +44,7 @@ body{
     height: 84vh;
     background-color: rgb(229,229,229);
     overflow: scroll;
+    
 }
 .send{
     padding: .133333rem /* 5/37.5 */ .266667rem /* 10/37.5 */;
@@ -51,6 +52,7 @@ body{
     background-color: rgb(135, 241, 248);
     border-radius: 1.2rem /* 45/37.5 */;
     color: white;
+    position: relative;
 }
 .userid{
     font-size: .64rem /* 24/37.5 */;
@@ -62,39 +64,41 @@ body{
     vertical-align: middle;
 }
 .mybox{
-    background-color: antiquewhite;
+    background-color: #2d292312;
     display: inline-block;
     position: relative;
     border-radius: .266667rem /* 10/37.5 */;
     /* right: 0; */
     display: block;
-    padding: .266667rem 0 .266667rem .266667rem;
+    padding: .266667rem;
     font-size: .48rem /* 18/37.5 */;
-    max-width: 7.573333rem /* 284/37.5 */;
+    max-width: 6.573333rem;
     max-height: 6.4rem /* 240/37.5 */;
     overflow-wrap: break-word;
-    margin-top: .533333rem /* 20/37.5 */;
+    margin-top: .133333rem /* 5/37.5 */;
 }
 .mybox::after{
     content: "";
     width: 0;
     height: 0;
+    top: .266667rem /* 10/37.5 */;
     right: -.426667rem /* -16/37.5 */;
     position: absolute;
     border: 8px solid transparent;
-    border-left-color: antiquewhite;
+    border-left-color: #2d292312;
 }
 .headlogo{
     border-radius: 50%;
     display: inline-block;
+    float: right;
 }
 .sendb{
-    display: inline-block;
-    position: absolute;
+    display: block;
+    /* position: absolute; */
     /* padding: .4rem; */
-    right: .266667rem /* 10/37.5 */;
-    
-    
+    float: right;
+    margin-right: .266667rem /* 10/37.5 */;
+    margin: .266667rem /* 10/37.5 */;
 }
 .nickname{
     top: 0;
@@ -139,7 +143,8 @@ body{
     position: relative;
     padding-top: .266667rem /* 10/37.5 */;
     min-height: 2rem /* 75/37.5 */;
-    max-height: 5rem;
+    /* max-height: 5rem; */
+    overflow: hidden;
 }
 .rightmm{
     display: inline-block;
@@ -147,9 +152,11 @@ body{
     padding-right: .133333rem /* 5/37.5 */;
 }
 .nickname2{
+    display: block;
     font-size: .48rem /* 18/37.5 */;
 }
 .mybox2{
+    float: right;
     background-color: antiquewhite;
     display: inline-block;
     position: relative;
@@ -157,7 +164,7 @@ body{
     /* right: 0; */
     display: block;
     margin-left: .266667rem /* 10/37.5 */;
-    padding: .266667rem .266667rem .266667rem 0;
+    padding: .266667rem;
     font-size: .48rem /* 18/37.5 */;
     max-width: 7.573333rem /* 284/37.5 */;
     max-height: 6.4rem /* 240/37.5 */;
@@ -173,11 +180,12 @@ body{
     border-right-color: antiquewhite;
 }
 .sendb2{
+    margin: .266667rem /* 10/37.5 */ 0;
     display: inline-block;
     margin-left: .266667rem /* 10/37.5 */;
 }
 .headlogo2{
-    
+    float: left;
     border-radius: 50%;
     display: inline-block;
 }
