--- a/聊天系统/css/friendsStyle.css
+++ b/聊天系统/css/friendsStyle.css
@@ -126,7 +126,8 @@
 }
 #content #friendsUl{
     width:100%;
-    height: 90%;
+    /* height: 90%; */
+    min-height: 100vh;
     /* background-color: gold; */
     position: absolute;
     top:15%;
@@ -138,18 +139,22 @@
     margin-bottom: 5px;
 }
 #content #friendsUl .friends .Logo{
-    width:20%;
-    height:100%;
+    /* width:20%;
+    height:100%; */
+    width: 50px;
+    height: 50px;
     object-fit:contain;
     margin-left:0;
     /* background-color: lawngreen; */
     display: inline-block;
+    overflow: hidden;
 }
 #content #friendsUl .friends .Logo img{
-    width:100%;
-    height:100%;
-    object-fit:contain;
-    border-radius: 50%;
+    /* width:100%;
+    height:100%; */
+    width: 50px;
+    height: 50px;
+    /* object-fit:contain; */
     margin-left:0;
 }
 #content #friendsUl .friends .Logo{
@@ -164,6 +169,11 @@
     height: 50px;
     border-radius: 50%;
 }
+#content #friendsUl .friends .Logo img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
 #content #friendsUl .friends .nickname{
     width:80%;
     height:50%;
@@ -172,7 +182,6 @@
     display: inline-block;
     position: absolute;
     top:0px;
-    right:0;
     /* margin-bottom: 2px; */
 }
 #content #friendsUl .friends .signature{
