--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -104,7 +104,7 @@ ul, li {
   height: 100%;
   padding: 0 .2rem;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .out .main .top .hidden_rigth ul li {
