--- a/聊天系统/css/friendsStyle.css
+++ b/聊天系统/css/friendsStyle.css
@@ -87,7 +87,7 @@
     display: flex;
     justify-content: center;
     top:15%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 #content #newFriends{
     width:100%;
@@ -149,25 +149,12 @@
     display: inline-block;
     overflow: hidden;
 }
-#content #friendsUl .friends .Logo img{
-    /* width:100%;
-    height:100%; */
-    width: 50px;
-    height: 50px;
-    /* object-fit:contain; */
-    margin-left:0;
-}
 #content #friendsUl .friends .Logo{
     width:50px;
     height:50px;
     /* background-color: darkturquoise; */
     display: inline-block;
-    margin-left:5%;
-}
-#content #friendsUl .friends .Logo{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    margin-left:5px;
 }
 #content #friendsUl .friends .Logo img{
     width: 50px;
@@ -182,6 +169,7 @@
     display: inline-block;
     position: absolute;
     top:0px;
+    overflow: hidden;
     /* margin-bottom: 2px; */
 }
 #content #friendsUl .friends .signature{
