--- a/聊天系统/css/Main.css
+++ b/聊天系统/css/Main.css
@@ -306,6 +306,7 @@ ul, li {
 .out .main .notice_area .notice_infomation .notice_left .notice_container {
   font-size: 14px;
   width: 88%;
+  overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
 }
